dataset1235/2025-2/1153765216/users/4118477972/executions/2747719322_2819779400.log
== SUBMISSION (2025-08-21 16:47:06)
-- CODE: 
quantidade = int(input("qual a quantidade de jogos:"))
valor = float(input("qual o valor do jogo:"))
frete = float(input("qual o valor do frete:"))
total = (quantidade * valor + frete)
print(total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
qual a quantidade de jogos:qual o valor do jogo:qual o valor do frete:1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
qual a quantidade de jogos:qual o valor do jogo:qual o valor do frete:240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
qual a quantidade de jogos:qual o valor do jogo:qual o valor do frete:540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
qual a quantidade de jogos:qual o valor do jogo:qual o valor do frete:765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
qual a quantidade de jogos:qual o valor do jogo:qual o valor do frete:162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
qual a quantidade de jogos:qual o valor do jogo:qual o valor do frete:618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:37:59)
-- CODE: 
quantidade = int(input("qual a quantidade de jogos:"))
valor = float(input("qual o valor do jogo:"))
frete = float(input("qual o valor do frete:"))
total = var(quantidade * valor + frete)
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade * valor + frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade * valor + frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade * valor + frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade * valor + frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade * valor + frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade * valor + frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 16:41:10)
-- CODE: 
quantidade = int(input("qual a quantidade de jogos:"))
valor = float(input("qual o valor do jogo:"))
frete = float(input("qual o valor do frete:"))
total = var = input(quantidade * valor + frete)
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:42:31)
-- CODE: 
quantidade = int(input("qual a quantidade de jogos:"))
valor = float(input("qual o valor do jogo:"))
frete = float(input("qual o valor do frete:"))
total = var = input(quantidade * valor + frete)
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:42:57)
-- CODE: 
quantidade = int(input("qual a quantidade de jogos:"))
valor = float(input("qual o valor do jogo:"))
frete = float(input("qual o valor do frete:"))
total = var = input(quantidade * valor + frete)
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 16:36:03)
-- CODE: 
quantidade = int(input("qual a quantidade de jogos:"))
valor = float(input("qual o valor do jogo:"))
frete = float(input("qual o valor do frete:"))
total = var(quantidade*valor+frete)
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade*valor+frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade*valor+frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade*valor+frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade*valor+frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade*valor+frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade*valor+frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:41:09)
-- CODE: 
quantidade = int(input("qual a quantidade de jogos:"))
valor = float(input("qual o valor do jogo:"))
frete = float(input("qual o valor do frete:"))
total = var = input(quantidade * valor + frete)
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:48:04)
-- CODE: 
quantidade = int(input("qual a quantidade de jogos:"))
valor = float(input("qual o valor do jogo:"))
frete = float(input("qual o valor do frete:"))
total = var = input(quantidade * valor + frete)
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 16:38:27)
-- CODE: 
quantidade = int(input("qual a quantidade de jogos:"))
valor = float(input("qual o valor do jogo:"))
frete = float(input("qual o valor do frete:"))
total = var(quantidade * valor + frete)
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade * valor + frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade * valor + frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade * valor + frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade * valor + frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade * valor + frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade * valor + frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 16:41:45)
-- CODE: 
quantidade = int(input("qual a quantidade de jogos:"))
valor = float(input("qual o valor do jogo:"))
frete = float(input("qual o valor do frete:"))
total = var = input(quantidade * valor + frete)
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:40:31)
-- CODE: 
quantidade = int(input("qual a quantidade de jogos:"))
valor = float(input("qual o valor do jogo:"))
frete = float(input("qual o valor do frete:"))
total = var = input("quantidade * valor + frete")
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input("quantidade * valor + frete")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input("quantidade * valor + frete")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input("quantidade * valor + frete")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input("quantidade * valor + frete")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input("quantidade * valor + frete")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input("quantidade * valor + frete")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 16:40:34)
-- CODE: 
quantidade = int(input("qual a quantidade de jogos:"))
valor = float(input("qual o valor do jogo:"))
frete = float(input("qual o valor do frete:"))
total = var = input("quantidade * valor + frete")
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input("quantidade * valor + frete")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input("quantidade * valor + frete")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input("quantidade * valor + frete")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input("quantidade * valor + frete")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input("quantidade * valor + frete")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input("quantidade * valor + frete")
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:37:20)
-- CODE: 
quantidade = int(input("qual a quantidade de jogos:"))
valor = float(input("qual o valor do jogo:"))
frete = float(input("qual o valor do frete:"))
total = var(quantidade*valor+frete)
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade*valor+frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade*valor+frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade*valor+frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade*valor+frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade*valor+frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade*valor+frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 16:45:15)
-- CODE: 
quantidade = int(input("qual a quantidade de jogos:"))
valor = float(input("qual o valor do jogo:"))
frete = float(input("qual o valor do frete:"))
total = var = input(quantidade * valor + frete)
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:46:04)
-- CODE: 
quantidade = int(input("qual a quantidade de jogos:"))
valor = float(input("qual o valor do jogo:"))
frete = float(input("qual o valor do frete:"))
total = var = input(quantidade * valor + frete)
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:36:00)
-- CODE: 
quantidade = int(input("qual a quantidade de jogos:"))
valor = float(input("qual o valor do jogo:"))
frete = float(input("qual o valor do frete:"))
total = var(quantidade*valor+frete)
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade*valor+frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade*valor+frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade*valor+frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade*valor+frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade*valor+frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var(quantidade*valor+frete)
            ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 16:41:16)
-- CODE: 
quantidade = int(input("qual a quantidade de jogos:"))
valor = float(input("qual o valor do jogo:"))
frete = float(input("qual o valor do frete:"))
total = var = input(quantidade * valor + frete)
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = var = input(quantidade * valor + frete)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 16:48:20)
-- CODE: 
quantidade = int(input("qual a quantidade de jogos:"))
valor = float(input("qual o valor do jogo:"))
frete = float(input("qual o valor do frete:"))
total = (quantidade * valor + frete)
print(total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
qual a quantidade de jogos:qual o valor do jogo:qual o valor do frete:1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
qual a quantidade de jogos:qual o valor do jogo:qual o valor do frete:240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
qual a quantidade de jogos:qual o valor do jogo:qual o valor do frete:540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
qual a quantidade de jogos:qual o valor do jogo:qual o valor do frete:765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
qual a quantidade de jogos:qual o valor do jogo:qual o valor do frete:162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
qual a quantidade de jogos:qual o valor do jogo:qual o valor do frete:618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
